
2011-01-31    Version 0.9.9 (beta)
              + lmap class for multilinear maps, used as a base class for state
              + lmap/mpower
              - several methods from state moved to lmap
              * state/concurrence fixed
              * state/purity does not normalize the state first
              * gates: qubits-as-a-default syntax removed as dangerous
              * gates: now return lmaps
              * gate/two: any dimensions, non-sequential targets OK
              * gate/controlled: any dimensions OK
              + gate/swap: swaps two subsystems
              * gate/phase: does not assume the first phase is always zero
              + examples/qft_circuit
              + more testing scripts

2011-11-16    Version 0.9.10 (beta)
              * performance-improving changes from MATLAB profiler
              * better code modularization
              + some new physical constants, updated to CODATA 2010 values
              + utils/rand_SL
              + utils/plot_state_trajectory
              + utils/plot_2q_corr
              + lmap/norm
              + lmap/trace
              + state/check
              b lmap/reorder now interprets permutations more consistently
              b several small bugs fixed in state/propagate
              b function names now match file names
              b lmap/display can now handle sparse lmaps as well
              * utils/tensorbasis now includes identity in the basis,
                state/bloch_vector and utils/bloch_state correspondingly
                changed to use the full correlation tensor
              * Control sequences package implemented in a more general way
                to match with the Dynamo optimal control package.
              * invariant/canonical output normalized more carefully
                to avoid a failing assert.


2012-10-??    Version 0.9.11a
              - state/normalization
              + state/trace
              + utils/nullspace